# Flicker

./: .gitignore  README.md  pyproject.toml
flicker/: __main__.py
flicker/assets/: __init__.py  resources.qrc  resources_rc.py
flicker/gui/: application.py
flicker/gui/pages/: Setting.py  about.py  base.py  home.py  setting.py  task.py
flicker/gui/states/: __init__.py  global_.py  task.py
flicker/gui/widgets/: input.py  sidebar.py
flicker/gui/widgets/agent/: chatbox.py
flicker/gui/widgets/memory/: fs.py
flicker/gui/widgets/proactive/: intents.py
flicker/gui/windows/: hotkeywindow.py  mainwindow.py
flicker/services/agent/: completion.py  tool.py
flicker/services/llm/: completion.py  embedding.py  types.py
flicker/services/memory/: __init__.py  base.py
flicker/services/memory/fs/: datasource.py  scanner.py  storage.py
flicker/services/proactive/intent_parser/: __init__.py  intent.py  parser.py
flicker/services/proactive/intent_parser/intents/: memory.py
flicker/services/recall/: record.py
flicker/utils/: hotkey_manager.py  image.py  notification.py  settings.py  taskqueue.py  theme.py  window.py
scripts/: ci.bat  ci.sh
scripts/deployment/: pyinstaller.bat
