[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flicker"
version = "0.1.0"
description = "Flicker(弹指) is expected to be an all-in-one ai productivity workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.0.0",
    "openai",
    "pydantic",
    "loguru",
    "keyboard"
]
license = {text = "MIT"}

authors = [
    {name = "Li Yi", email = "liyi.fm@foxmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "pycodestyle",
    "pyinstaller"
]

[tool.setuptools]
packages = ["flicker"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
